src/objects/AR_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name_Number__c</fullName>
        <formula>Account__r.Name + &apos; - &apos; + Account__r.KV_CustAcctNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name &amp; Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AR Snapshots</relationshipLabel>
        <relationshipName>AR_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bucket_Fields_Sum__c</fullName>
        <formula>Unpaid_Amount_0_30_Days__c +  Unpaid_Amount_31_60_Days__c +  Unpaid_Amount_61_90_Days__c +  Unpaid_Amount_91_120_Days__c +  Unpaid_Amount_121_180_Days__c  + Unpaid_Amount_180_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bucket Fields Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Casesafe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Casesafe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credited_Amount__c</fullName>
        <formula>Invoice__r.Credited_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credited Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_Balance__c</fullName>
        <label>Deferred Revenue Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>AR Snapshots</relationshipLabel>
        <relationshipName>AR_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <description>Value is being derived from Invoice.LegalEntity or Payment.LegalEntity.</description>
        <formula>IF(Invoice__c != null, Invoice__r.Legal_Entity__c,   TEXT( Payment__r.Legal_Entity__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value is being derived from Invoice.LegalEntity or Payment.LegalEntity.</inlineHelpText>
        <label>Legal Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid/Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>AR Snapshots</relationshipLabel>
        <relationshipName>AR_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Account__c</fullName>
        <formula>Invoice__r.Shipping_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_Date__c</fullName>
        <description>This is will be populated when you generate the Statement using the UI.</description>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Created__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Value is being derived from Invoice.InvoiceDate or Payment.PaymentDate.</description>
        <formula>IF(Invoice__c != null, Invoice__r.Invoice_Date__c, Payment__r.Payment_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value is being derived from Invoice.InvoiceDate or Payment.PaymentDate.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Name__c</fullName>
        <description>Invoice Number/Payment Number</description>
        <formula>IF(Invoice__c != null,Invoice__r.Name &amp; &quot; / &quot;&amp; Legal_Entity__c &amp; &quot;-&quot; &amp; RIGHT(Invoice__r.Invoice_Reference__c, 6), Payment__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Invoice Number/Payment Number</inlineHelpText>
        <label>Transaction Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Value__c</fullName>
        <description>Total Invoice Value or Payment Amount</description>
        <inlineHelpText>Total Invoice Value or Payment Amount</inlineHelpText>
        <label>Transaction Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Amount_0_30_Days__c</fullName>
        <label>0-30 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Amount_121_180_Days__c</fullName>
        <label>121-180 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Amount_180_Days__c</fullName>
        <label>&gt; 180 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Amount_31_60_Days__c</fullName>
        <label>31-60 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Amount__c</fullName>
        <description>Unpaid amount of the invoice/Unallocated amount of the payment.</description>
        <inlineHelpText>Unpaid amount of the invoice/Unallocated amount of the payment.</inlineHelpText>
        <label>Unpaid/UnAllocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>AR Snapshot</label>
    <listViews>
        <fullName>AR_Snapshot</fullName>
        <columns>NAME</columns>
        <columns>Invoice__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Payment__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Transaction_Value__c</columns>
        <columns>Unpaid_Amount__c</columns>
        <columns>Unpaid_Amount_180_Days__c</columns>
        <columns>Unpaid_Amount_0_30_Days__c</columns>
        <columns>Unpaid_Amount_121_180_Days__c</columns>
        <columns>Unpaid_Amount_31_60_Days__c</columns>
        <columns>Unpaid_Amount_61_90_Days__c</columns>
        <columns>Unpaid_Amount_91_120_Days__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>8/24/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>ajagga</value>
        </filters>
        <label>AR Snapshot</label>
    </listViews>
    <listViews>
        <fullName>AR_Snapshot_detail_view</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>AR Snapshot detail view</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Unpaid_Amount_180_Days__c</columns>
        <columns>Invoice__c</columns>
        <columns>Paid_Amount__c</columns>
        <columns>Payment__c</columns>
        <columns>Statement_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Anthony_Pike_AR_Snapshot_031016</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Unpaid_Amount_180_Days__c</columns>
        <columns>Unpaid_Amount_0_30_Days__c</columns>
        <columns>Unpaid_Amount_121_180_Days__c</columns>
        <columns>Unpaid_Amount_31_60_Days__c</columns>
        <columns>Unpaid_Amount_61_90_Days__c</columns>
        <columns>Unpaid_Amount_91_120_Days__c</columns>
        <columns>Account__c</columns>
        <columns>Account_Name_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>contains</operation>
            <value>pike</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>10/3/2016 12:00 AM</value>
        </filters>
        <label>Anthony Pike AR Snapshot 031016</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>Salesforce_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Snapshot_created_10_3_16</fullName>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Unpaid_Amount_180_Days__c</columns>
        <columns>Unpaid_Amount_0_30_Days__c</columns>
        <columns>Unpaid_Amount_121_180_Days__c</columns>
        <columns>Unpaid_Amount_31_60_Days__c</columns>
        <columns>Unpaid_Amount_61_90_Days__c</columns>
        <columns>Unpaid_Amount_91_120_Days__c</columns>
        <columns>Account_Name_Number__c</columns>
        <columns>Invoice__c</columns>
        <columns>Legal_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>10/3/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>contains</operation>
            <value>ch</value>
        </filters>
        <label>Snapshot created 10/3/16</label>
        <sharedTo>
            <group>KV_Finance</group>
            <group>Salesforce_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>jordon_sp</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Legal_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>jordon meadows</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/31/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>20171,20172-1-RealTime,20172-2-RealTime</value>
        </filters>
        <label>jordon snapshot check</label>
        <language>en_US</language>
        <sharedTo>
            <group>KV_Finance</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>AR Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>